# CpCpp

./: .clang-format  .gitignore  CMakeLists.txt  CpCpp.cpp  CpCpp.sln  Dockerfile  README.md  brute.cpp  clang-format.ps1  clang-format.sh  download-atcoder-library.sh  download-cp-algorithms-library.sh  download-kactl-library.sh  gen.cpp  init.sh  input.txt  output.txt  solution.h  stress.sh  submission.cpp  utils.h  validator.h
.azure-pipelines/: ci.yml
CpCpp/: CMakeLists.txt  CpCpp.cpp  CpCpp.vcxproj  CpCpp.vcxproj.filters  input.txt  main.cc  solution.h  submission.cc  submission.cpp  utils.h
docs/: index.html
public/: index.html
tests/: BpmHopcraft.test.cpp  DisjointSet.test.cpp  LCA.test.cpp  SparseTable.cpp
tests/FenwickTree/: FenwickTree.point_add_range_sum.test.cpp  FenwickTree.static_range_sum.test.cpp
tests/FenwickTree.h/: FenwickTree.static_range_sum.test.cpp
tests/FenwickTreeRangeSum/: FenwickTreeRangeSum.static_range_sum.test.cpp
tests/PersistentSegmentTree/: PersistentSegmentTree.point_add_range_sum.test.cpp  PersistentSegmentTree.static_range_sum.test.cpp
tests/SegmentTree/: SegmentTree.point_add_range_sum.test.cpp  SegmentTree.static_range_sum.test.cpp
tools/: CMakeLists.txt  book-generator.cpp
